CDOM: REmaining code Catch up to Trunk 3868
(non-working build?)

git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/branches/cdom@3895 ef53c05b-3124-4d59-ae7d-fe3273f42be7